Update bio to specify 'brain neuroimaging'

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Kai Ye"
   pronouns         : # example: "she/her"  
-  bio    : "Ph.D. in Electrical & Computer Engineering from University of Pittsburgh. I work on neuroimaging, AI for healthcare, and trustworthy machine learning."  # 
+  bio    : "Ph.D. in Electrical & Computer Engineering from University of Pittsburgh. I work on brain neuroimaging, AI for healthcare, and trustworthy machine learning."  # 
   # location         : "Earth"
   # employer         : "Red Brick University"
   # uri              : # URL
