--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "kai-ye-86a554273"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
